tests/reference/asr-intrinsics_06-1ff7a26.stderr
semantic error: The kind of first argument of `ieor` intrinsic must be the same as second argument
 --> tests/errors/intrinsics_06.f90:2:14
  |
2 |     print *, ieor(1, 1_8)
  |              ^^^^^^^^^^^^ 
